--- a/code.html
+++ b/code.html
@@ -10,11 +10,12 @@
 
 <body>
 
-	<div class="container">
-	<div>
-        <h1>Student grade calculator</h1>
-    </div>
-    <h1>Made by Ezekiel Olateju</h1>
+	<header>
+		<div class="container>
+		<h1>Student grade calculator</h1>
+		</div>
+		<h1>Made by Ezekiel Olateju</h1>
+	</header>
 
 	<div class="screen-body-item">
 		<div class="app">
